<resources>
    <string name="app_name">NUMAD16S-DharaBhavsar</string>
    <string name="title_name">Dhara Bhavsar</string>
    <string name="action_settings">Settings</string>
    <string name="about_label"> About </string>
    <string name="generate_error_label"> Generate Error </string>
    <string name="tictactoe_label"> Tic Tac Toe </string>
    <string name="dictionary_label"> Dictionary </string>
    <string name="wordgame_label"> Word Game </string>
    <string name="communication_label"> Communication </string>
    <string name="wordgame2_label"> Two Player Word Game </string>
    <string name="trickiestpart_label"> Trickiest Part </string>
    <string name="finalproject_label"> Final Project </string>

    <string name="ut3_app_name">UT3</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <!--<string name="about_label">About</string>-->
    <string name="ok_label">OK</string>
    <string name="about_text">\
This game is played just like
regular Tic Tac Toe with one difference: to win a tile
you have to win a smaller game of Tic Tac Toe inside that tile.\n\
\n\
A tie happens when there are no further moves.
In the case of a tie in a small board, that will count as a win for
both sides in the larger game.
</string>

    <string name="about_app_screen"> About </string>

    <string name="name">Dhara Bhavsar</string>
    <string name="email">bhavsar.d@husky.neu.edu</string>
    <string name="year">1st Year</string>
    <string name="program">Master of Science in Computer Science</string>
    <string name="imei">IMEI : </string>

    <string name="clearBtn"> Clear </string>
    <string name="returnToMenuBtn"> Return to menu </string>
    <string name="acknowledgementsBtn"> Acknowledgements </string>
    <string name="dictActivityLabel"> Test Dictionary </string>
    <string name="test_dict_app_screen"> Test Dictionary </string>
    <string name="ack_app_screen"> Acknowledgements </string>

    <string name="score_board_button"> Score Board </string>

    <string name="scraggle_app_name">Word Game</string>
    <string name="game_instructions_label">How To Play</string>

    <string name="dictActivityLabelWordGame"> Test Dictionary for Word Game </string>

    <string name="help_text">\
This game is played just like
regular Boggle and Scramble game. Except that it has two phases.\n\
\n\
In PHASE-1, you have to find 9 words from
each of the 9 letters from the 9 3x3 grids in 1.5 minute
like a Boggle Game. Such that each next letter to the
selected one should be horizontally, vertically or diagonally
adjacent to the selected letter. \n\
\n\
Similarly in PHASE-2, you have to make as many words possible
from the letters of the words which were made in the
first round in another 1.5 minute.
And you have to keep in mind that the consecutive letters cannot
be from the same 3x3grid to form a word in this phase. \n\
\n\
You CANNOT REUSE the letters at all in the game to form words.\n\
\n\
Scoring is based on the weightage of letters used to prepare the
correct words.\n\
</string>

    <string name="ack_text">\
Pictures from website:\n\
        depositphotos\n\
        dreamstime\n\
        lisamarieandjayscrabblepieces\n\
        swipe to\n\
        dasscontinental\n\
\n\
Code Snippets: \n\
        http://stackoverflow.com/questions/20588736/how-can-i-shuffle-the-letters-of-a-word\n\
        http://www.androidinterview.com/android-toast-creating-a-android-custom-toast-example\n\
\n\
Sound: freesound.org\n\
\n\
Help from: Dharam and Deryl\n\
\n\
</string>

    <string name="phase_change_title">End of Phase-1</string>
    <string name="phase_change_text">Let us start the Phase-2 of the game.</string>

    <string name="game_end_title">End of Game</string>
    <string name="game_end_text">Score is : %1$d</string>

    <string name="no_saved_game_title">No Saved Game</string>
    <string name="no_saved_game_text">There is no saved game. Please start a new game.</string>

    <string name="custom_toast_text">Word - %1$s - found!!!</string>
    <string name="pause_label">Pause</string>
    <string name="resume_label">Resume</string>
    <string name="quit_label">Quit</string>
    <string name="mute_label">Mute</string>
    <string name="unmute_label">Unmute</string>


    <!--<string name="app_name">GCM Sample Demo</string>
    <string name="action_settings">Settings</string>-->
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="send_label">Send</string>
    <string name="clear_label">Clear</string>
    <string name="send_to_label">Send To ...</string>


    <string name="combine_play_label">Combine Play</string>
    <string name="challenged_play_label">Challenged Play</string>

    <string name="first_time_user"> First-time User </string>
    <string name="whats_your_name"> Please enter your name. </string>
    <string name="hint_name">Enter your name here...</string>

        <string name="help_text_2">
This game is played just like
regular Boggle and Scramble game. Except that it has two phases
and will be played between two random players.\n\
\n\
In PHASE-1, you have to find 9 words from
each of the 9 letters from the 9 3x3 grids in 1.5 minute
like a Boggle Game. Such that each next letter to the
selected one should be horizontally, vertically or diagonally
adjacent to the selected letter. \n\
\n\
Similarly in PHASE-2, you have to make as many words possible
from the letters of the words which were made in the
first round in another 1.5 minute like a Scramble Game.
And you have to keep in mind that the consecutive letters cannot
be from the same 3x3grid to form a word in this phase. \n\
\n\
You CANNOT REUSE the letters at all in the game to form words.\n\
\n\
SCORING is based on the weightage of letters used to prepare the
correct words.\n\
\n\
If you have selected NEW GAME then an async Combative Game will be
started and on its successful completion of both the phases will be
sent to another player selected randomly to play against you on the
same board.\n\
\n\
If you have selected CHALLENGED GAME then you have been randomly
selected to play against player 1 and on this game could also be started
directly by clicking on the game request message you get in the
notification bar and you will be playing on the same board as player 1.\n\
\n\
If you have selected COMBINE GAME then you get to chose a player to play
with and you both can play simultaneously if player 2 starts the game.
Here only phase 1 is played together where small 3x3 grid numbered evenly
will be solved by player 1 and rest will be solved by player 2.\n\
\n\
Timing is same for all these game play.\n\
On losing internet connection game will be paused until reconnected.\n\
\n\
\n\*ADD-ON*\n\
There is an additional feature on shaking the phone - you get to reshuffle
the letters in the 3x3 board and restart with the new board.\n\
</string>

    <string name="ack_text_2">\
Pictures from website:\n\
        depositphotos\n\
        dreamstime\n\
        lisamarieandjayscrabblepieces\n\
        swipe to\n\
        dasscontinental\n\
\n\
Code Snippets: \n\
        http://www.mkyong.com/android/android-prompt-user-input-dialog-example/\n\
        http://stackoverflow.com/questions/10361243/check-internet-connection-in-android-and-reload-the-activity-if-it-is-not-availa\n\
        http://stackoverflow.com/questions/21087423/dialog-is-not-displaying-textview-imageview\n\
        http://developer.android.com/reference/android/app/TabActivity.html\n\
        https://thepseudocoder.wordpress.com/2011/10/04/android-tabs-the-fragment-way/\n\
        http://stackoverflow.com/questions/9972769/start-broadcast-receiver-from-an-activity-in-android\n\
        http://viralpatel.net/blogs/android-internet-connection-status-network-change/\n\
        http://android.codeandmagic.org/android-tabs-with-fragments/\n\
        http://stackoverflow.com/questions/31355910/get-and-store-multidimensional-array-not-json-in-firebase\n\
        https://www.firebase.com/docs/rest/guide/understanding-data.html\n\
        https://www.firebase.com/docs/web/libraries/angular/guide/synchronized-arrays.html\n\
        http://stackoverflow.com/questions/9919734/selecting-random-key-and-value-sets-from-a-map-in-java\n\
        http://stackoverflow.com/questions/25533655/android-gcm-server-sent-but-gcm-not-pushing-to-device\n\
        http://stackoverflow.com/questions/21872464/get-button-coordinates-and-detect-if-finger-is-over-them-android\n\
\n\
Sound: freesound.org\n\
\n\
Help from: Dharam and Deryl\n\
\n\
</string>

    <string name="net_lost_title"> Internet Connection Lost </string>
    <string name="net_lost_text"> There is no internet connection. The game requires one. </string>

    <string name="reconnect_label"> Try Reconnecting </string>

    <string name="select_team_mate">Please select a team mate to play with...</string>
    <string name="test_gcm_title">Send push notification to ...</string>
    <string name="test_gcm_label">Test GCM</string>

    <string name="wearable_not_connected">No Android Wear Connected</string>
    <string name="trickiest_part_label">Trickiest Part</string>
    <string name="final_project_label">Final Project</string>
    <string name="trickiest_part_description">When bite is detected, the wear will vibrate</string>
    <string name="final_project_description">The goal of our app is to serve the purpose of training
        you, the user, to reduce your speed of eating food
gradually which would ultimately aid in reducing your weight.\n\n\
This app is based on the scientifically proven fact that it takes 20 minutes for our brain to realize that we have had enough
food to eat. So when we are hungry and we eat fast then we tend to eat more food in these 20 minutes rather than the
amount of food that would be required to satisfy our hunger. So this Android Wear App would buzz and notify you as soon
as it senses that there has been an increase in the eating speed; hence reminding you instead to enjoy your meal while
The app will detect the wrist-hand motion while you are eating. If this motion occurs before the timer runs out then the
app will notify you about increase in your eating speed.\n\n\
The app looks at your current eating speed for the first two meals and automatically suggests a slower speed. The app
also allows you to modify (increase/decrease) the suggested time taken for the meal. This is usually not recommended
but you could opt for it.\n\n\
P.S. “Make sure to wear your Android Wear on your eating hand.”</string>
    <string name="launch_on_wear">Launch on Wear</string>

    <string name="enter_word_here">Enter word here..</string>

</resources>
