<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="20dp"
    android:paddingTop="12dp"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="edu.neu.madcourse.dharabhavsar.ui.main.MainActivityFragment"
        tools:showIn="@layout/activity_main">


        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView" />-->

        <Button
            android:id="@+id/trickiestpart_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/trickiestpart_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/wordgame2player_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/wordgame2_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/communication_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/communication_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/wordgame_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/wordgame_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/dictionary_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/dictionary_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/tictactoe_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/tictactoe_label"
            android:textAllCaps="false" />
        <!--android:onClick=""/>-->

        <Button
            android:id="@+id/generate_error_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/generate_error_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/about_label"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/quit_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/quit_label"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>