<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="@dimen/elevation_high"
    android:orientation="vertical"
    android:padding="@dimen/menu_padding"
    tools:context="edu.neu.madcourse.dharabhavsar.ui.communication.MainActivityScraggle2"
    android:background="#326c90">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/menu_space"
        android:text="@string/scraggle_app_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="@dimen/menu_text_size"
        android:textColor="@color/scraggle_title_textColor" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/continue_label"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor"
        android:visibility="gone" />

    <Button
        android:id="@+id/new_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/new_game_label"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor" />

    <Button
        android:id="@+id/combine_play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/combine_play_label"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor" />

    <Button
        android:id="@+id/challenged_play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/challenged_play_label"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor"
        android:visibility="gone"/>

    <Button
        android:id="@+id/game_instructions_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/game_instructions_label"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor" />

    <Button
        android:id="@+id/score_board_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/score_board_button"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor" />

    <Button
        android:id="@+id/acknowledgementsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/menu_button_margin"
        android:padding="@dimen/menu_button_padding"
        android:text="@string/acknowledgementsBtn"
        android:textAllCaps="false"
        android:textColor="@color/scraggle_btn_textColor"
        android:background="@color/scraggle_btn_backgroundColor" />
</LinearLayout>
