<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/control_padding"
    tools:context=".ScraggleGameActivity">

    <Button
        android:id="@+id/button_pause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/pause"
        android:elevation="@dimen/elevation_low"
        android:text="@string/pause_label" />

    <Button
        android:id="@+id/button_resume"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/resume"
        android:elevation="@dimen/elevation_low"
        android:text="@string/resume_label"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/quit_dasscontinental"
        android:elevation="@dimen/elevation_low"
        android:text="@string/quit_label" />
</LinearLayout>
