<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.neu.madcourse.dharabhavsar.dictionary.MainActivityDict"
    android:weightSum="1"
    android:showDividers="none" >

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editWordText"
        android:layout_gravity="left|center_horizontal"
        android:hint="Enter word here.."/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearBtn"
        android:id="@+id/clearBtn"
        android:layout_gravity="center_horizontal|right"
        android:textAllCaps="false"
        android:layout_row="0" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnToMenuBtn"
        android:id="@+id/returnToMenuBtn"
        android:layout_gravity="left|center_horizontal"
        android:textAllCaps="false"
        android:layout_row="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acknowledgementsBtn"
        android:id="@+id/acknowledgementsBtn"
        android:layout_gravity="center_horizontal|right"
        android:textAllCaps="false"
        style="?android:attr/buttonStyleSmall"
        android:layout_row="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textViewWordList"
        android:layout_row="1" />
    <!--android:text="Medium Text"-->

</GridLayout>